src/components/layout/accountMenu/AccountMenuContainer.less
@import '../../../../resources/styles/_colours.less';

.account-menu {
  padding: 5px 0;

  li {
    margin: 0;
    padding: 0;

    a {
      margin: 0;
      display: inline-flex;
      align-items: center;
      text-decoration: none;
      font-size: 16px;
      color: @cta-blue;
      width: 100%;
      flex: 1;

      .icon-container {
        margin-right: 14px;
        width: 24px;
        height: 24px;
        text-align: center;
        line-height: 1;
      }
    }
  }

  &--desktop {
    a {
      padding: 10px 20px;
    }
  }
}

.display-mobile {
  float: right;
  
  .account-menu-icon {
    height: 40px;
    width: 40px;
    margin-right: 10px;
  }

  .icon-label {
    display: none;
  }
}

